# juce-template

./: .gitmodules  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: CMakeLists.txt  README.md  custom_path.sh
{{ cookiecutter.project_name }}/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
